removing dangerous command

--- a/poc.html
+++ b/poc.html
@@ -54,7 +54,7 @@
             *   THIS IS DANGEROUS SO BE CAREFUL!
             *   (without it, it is just a .url file to https://github.com/mdrb97 :-D )
             */
-            let uncPath = "\\\\.\\GLOBALROOT\\Device\\ConDrv\\KernelConnect";
+            let uncPath = "";
 
             /*
             * blob payload - this is
